# CVI4IL-SS26-Project

./: .gitattributes  README.md  pyproject.toml
code/: 01_data_exploration.ipynb  02_data_preparation.ipynb  03_model_training.ipynb  04_evaluation.ipynb
data/ground_truth/: notes.json
data/ground_truth/labels/: batch1_trainset.json  batch2_valset.json  batch3_testset.json
data/images/test/: Thumbs.db
data/images/val/: Thumbs.db
data/processed/labels_keypoints/test/: 152_14253.txt  152_14273.txt  152_14293.txt  152_14313.txt  152_14333.txt  152_14353.txt  152_14373.txt  152_14393.txt  152_14413.txt  152_14433.txt  152_14453.txt  152_14473.txt  152_14493.txt  152_14513.txt  152_14533.txt  152_14543.txt  152_14553.txt  152_14563.txt  152_14573.txt  152_14593.txt  152_14613.txt  152_14633.txt  152_14653.txt  152_14663.txt  152_14673.txt  152_14683.txt  152_14693.txt  152_14703.txt  152_14723.txt  152_14733.txt  152_14743.txt  152_14763.txt  152_14783.txt  152_14803.txt  152_14823.txt  152_14833.txt  152_14853.txt  152_14863.txt  152_14883.txt  152_14903.txt  (+971 more)
data/processed/labels_keypoints/train/: 0_8082.txt  0_8083.txt  0_8084.txt  0_8086.txt  0_8087.txt  0_8088.txt  0_8089.txt  0_8090.txt  0_8091.txt  0_8092.txt  0_8093.txt  0_8094.txt  0_8095.txt  0_8096.txt  0_8097.txt  0_8098.txt  0_8099.txt  0_8101.txt  0_8102.txt  0_8103.txt  0_8104.txt  0_8105.txt  0_8106.txt  0_8107.txt  0_8108.txt  0_8109.txt  0_8110.txt  0_8111.txt  0_8112.txt  0_8113.txt  0_8114.txt  0_8115.txt  0_8116.txt  0_8117.txt  0_8118.txt  0_8119.txt  0_8120.txt  0_8121.txt  (+802 more)
docs/: proposal.md
(+1000 files in other folders)
