[project]
name = "cvi4il-ss26-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ipykernel>=7.1.0",
]

[dependency-groups]
viz = [
    "plotly>=6.6.0",
]
